--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
 body {
-  background-color: rgba(164, 164, 164, 0.45);
+  background: linear-gradient(
+    135deg,
+    rgba(242, 160, 255, 0.7),
+    rgba(155, 230, 255, 0.7)
+  );
 }
 
 .container {
@@ -10,36 +14,34 @@ body {
 .left-container {
   z-index: 1;
   position: fixed;
-  top: 5%;
-  left: 0;
-  margin-left: 10%;
+  bottom: 5%;
+  left: 10px;
+  margin-left: 2%;
   height: 90%;
-  width: 48%;
+  width: 55%;
 
-  border: 1px solid rgba(80, 0, 128, 0.15);
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
   background: linear-gradient(
     135deg,
     rgba(80, 0, 128, 0.35),
     rgba(80, 0, 128, 0.85)
   );
 
-  --mask: linear-gradient(#000 0 0) left/calc(100% - 200px) 100% no-repeat,
-    conic-gradient(from -155deg at right, #0000, #000 1deg 129deg, #0000 130deg)
-      right/200px 857.8px repeat-y;
-  -webkit-mask: var(--mask);
-  mask: var(--mask);
+  clip-path: polygon(75% 0%, 100% 52%, 75% 100%, 0% 100%, 0 51%, 0% 0%);
 }
 
 .right-container {
   z-index: 0;
   position: fixed;
-  top: 5%;
-  right: 0;
-  margin-right: 10%;
+  bottom: 5%;
+  right: 10px;
+  margin-right: 2%;
   height: 90%;
-  width: 48%;
+  width: 55%;
 
-  border: 1px solid rgba(0, 64, 128, 0.15);
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
   background: linear-gradient(
     135deg,
     rgba(0, 64, 128, 0.25),
@@ -56,7 +58,7 @@ body {
   border-radius: 20px;
 }
 
-.result-block {
+.result-content {
   position: absolute;
   right: 0;
   margin: 20px;
@@ -66,3 +68,7 @@ body {
   background: linear-gradient(135deg, rgba(1, 1, 1, 0.1), rgba(1, 1, 1, 0.15));
   border-radius: 20px;
 }
+
+/* @media screen and (min-width: 200px) and (max-width: 500px){
+
+} */
