--- a/index.css
+++ b/index.css
@@ -14,10 +14,10 @@ body {
 .left-container {
   z-index: 1;
   position: fixed;
-  bottom: 5%;
+  top: 15%;
   left: 10px;
   margin-left: 2%;
-  height: 90%;
+  height: 75%;
   width: 55%;
 
   border-top-left-radius: 20px;
@@ -34,10 +34,10 @@ body {
 .right-container {
   z-index: 0;
   position: fixed;
-  bottom: 5%;
+  top: 15%;
   right: 10px;
   margin-right: 2%;
-  height: 90%;
+  height: 75%;
   width: 55%;
 
   border-top-right-radius: 20px;
