--- a/Express/public/index.css
+++ b/Express/public/index.css
@@ -6,43 +6,34 @@ body {
   );
 }
 
-.container {
+.background {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .left-container {
-  display: block;
-  z-index: 1;
-  position: fixed;
-  top: 15%;
-  left: 10px;
-  margin-left: 2%;
-  height: 75%;
-  width: 55%;
+  height: 700px;
+  width: 850px;
 
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
+  border-radius: 20px;
   background: linear-gradient(
     135deg,
     rgba(80, 0, 128, 0.35),
     rgba(80, 0, 128, 0.85)
   );
 
-  clip-path: polygon(75% 0%, 100% 52%, 75% 100%, 0% 100%, 0 51%, 0% 0%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .right-container {
-  z-index: 0;
-  position: fixed;
-  top: 15%;
-  right: 10px;
-  margin-right: 2%;
-  height: 75%;
-  width: 55%;
+  height: 700px;
+  width: 850px;
 
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-radius: 20px;
   background: linear-gradient(
     135deg,
     rgba(0, 64, 128, 0.25),
@@ -52,8 +43,8 @@ body {
 
 .image-display-block {
   margin: 20px;
-  width: 55%;
-  height: 55%;
+  width: 85%;
+  height: 75%;
 
   background: linear-gradient(135deg, rgba(1, 1, 1, 0.1), rgba(1, 1, 1, 0.15));
   border-radius: 20px;
@@ -67,8 +58,6 @@ body {
 }
 
 .result-content {
-  position: absolute;
-  right: 0;
   margin: 20px;
   width: 55%;
   height: 55%;
@@ -89,15 +78,11 @@ body {
 }
 
 .submit {
-  margin-left: 60px;
-  margin-top: 30px;
-
   border: 2px solid rgba(255, 255, 255, 0.7);
   width: 35%;
   height: 50px;
   color: rgb(255, 254, 254);
   background: rgba(41, 148, 255, 0.85);
-  padding: 5px 10px;
   border-radius: 15px;
   cursor: pointer;
 }
@@ -105,6 +90,74 @@ body {
 input {
   display: none;
 }
-/* @media screen and (min-width: 200px) and (max-width: 500px){
 
-} */
+.indicator {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  transform: rotate(45deg);
+}
+.indicator span {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 3px solid #fff;
+  border-right: 3px solid #fff;
+  animation: animate 1s linear infinite;
+}
+.indicator span:nth-child(1) {
+  top: -30px;
+  left: -30px;
+  animation-delay: 0s;
+}
+.indicator span:nth-child(2) {
+  top: -15px;
+  left: -15px;
+  animation-delay: 0.2s;
+}
+.indicator span:nth-child(3) {
+  top: 0;
+  left: 0;
+  animation-delay: 0.4s;
+}
+.indicator span:nth-child(4) {
+  top: 15px;
+  left: 15px;
+  animation-delay: 0.6s;
+}
+.indicator span:nth-child(5) {
+  top: 30px;
+  left: 30px;
+  animation-delay: 0.8s;
+}
+@keyframes animate {
+  0% {
+    border-color: #fff;
+    transform: translate(0, 0);
+  }
+  20% {
+    border-color: #fff;
+    transform: translate(15px, 15px);
+  }
+  20.1%,
+  100% {
+    border-color: #0000006c;
+  }
+}
+
+@media screen and (min-width: 200px) and (max-width: 500px) {
+  .left-container {
+    height: 400px;
+    width: 300px;
+  }
+  .right-container {
+    height: 350px;
+    width: 300px;
+  }
+}
