--- a/Express/public/index.css
+++ b/Express/public/index.css
@@ -13,6 +13,16 @@ body {
   align-items: center;
 }
 
+.file,
+.cam {
+  border: 2px solid rgba(255, 255, 255, 0.7);
+  width: 15%;
+  height: 50px;
+  color: rgb(255, 254, 254);
+  background: rgba(90, 90, 90, 0.85);
+  border-radius: 15px;
+  cursor: pointer;
+}
 .left-container {
   height: 700px;
   width: 850px;
@@ -55,6 +65,19 @@ body {
   align-items: center;
 
   cursor: pointer;
+}
+.camera-display-block {
+  margin: 20px;
+  width: 85%;
+  height: 85%;
+
+  background: linear-gradient(135deg, rgba(1, 1, 1, 0.1), rgba(1, 1, 1, 0.15));
+  border-radius: 20px;
+  border: 2px solid orange;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .result-content {
