--- a/Express/public/index.css
+++ b/Express/public/index.css
@@ -80,13 +80,26 @@ body {
   align-items: center;
 }
 
-.result-content {
+.result-block {
   margin: 20px;
-  width: 55%;
-  height: 55%;
+  width: 85%;
+  height: 75%;
 
-  background: linear-gradient(135deg, rgba(1, 1, 1, 0.1), rgba(1, 1, 1, 0.15));
+  background: rgba(0, 0, 0, 0.555);
+  border: 1px solid black;
   border-radius: 20px;
+
+  color: rgb(38, 255, 0);
+  font-family: Andale Mono;
+  font-size: 14px;
+  font-weight: bold;
+
+  overflow: scroll;
+}
+
+.result-content {
+  margin-top: 30%;
+  text-align: center;
 }
 
 .inner {
@@ -108,6 +121,15 @@ body {
   background: rgba(41, 148, 255, 0.85);
   border-radius: 15px;
   cursor: pointer;
+}
+
+video {
+  clear: both;
+  display: block;
+  margin: 10px;
+  background: #000000;
+  width: 640px;
+  height: 480px;
 }
 
 input {
@@ -174,7 +196,7 @@ input {
   }
 }
 
-@media screen and (min-width: 200px) and (max-width: 500px) {
+@media screen and (min-width: 200px) and (max-width: 900px) {
   .left-container {
     height: 400px;
     width: 300px;
@@ -182,5 +204,10 @@ input {
   .right-container {
     height: 350px;
     width: 300px;
+  }
+  .file,
+  .cam {
+    width: 100px;
+    height: 80px;
   }
 }
